--- a/fy/map.html
+++ b/fy/map.html
@@ -176,7 +176,7 @@
                 
                 <div class="overflow-x-auto">
                   <table id="businessTable" class="w-full border-collapse">
-                    <caption class="text-sm text-gray-500 mb-4">Lêst bywurke: 23 juny 2025</caption>
+                    <caption class="text-sm text-gray-500 mb-4">Lêst bywurke: 27 septimber 2025</caption>
                     <thead>
                       <tr class="border-b border-gray-200">
                         <th class="text-left py-3 px-4 font-medium text-gray-900">Bedriuw</th>
@@ -268,7 +268,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Drukkerij</td>
                           <td class="py-3 px-4 text-gray-600">Graaf Adolfstraat 36-C</td>
-                          <td class="py-3 px-4 text-gray-600">Sneek</td>
+                          <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -302,7 +302,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">IJssalon</td>
                           <td class="py-3 px-4 text-gray-600">Leeuwarderweg 1</td>
-                          <td class="py-3 px-4 text-gray-600">Sneek</td>
+                          <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -332,7 +332,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Broodjeszaak</td>
                           <td class="py-3 px-4 text-gray-600">Grootzand 49</td>
-                          <td class="py-3 px-4 text-gray-600">Sneek</td>
+                          <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -400,7 +400,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Telefoon reparaties</td>
                           <td class="py-3 px-4 text-gray-600">Grootzand 41</td>
-                          <td class="py-3 px-4 text-gray-600">Sneek</td>
+                          <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -434,7 +434,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Straatmuzikant</td>
                           <td class="py-3 px-4 text-gray-600">Centrum (Zaterdagen)</td>
-                          <td class="py-3 px-4 text-gray-600">Sneek</td>
+                          <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-gray-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -502,7 +502,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Shiatsu, Acupunctuur</td>
                           <td class="py-3 px-4 text-gray-600">Dr. Obe Postmastraat 1</td>
-                          <td class="py-3 px-4 text-gray-600">Sneek</td>
+                          <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -604,7 +604,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Restaurant</td>
                           <td class="py-3 px-4 text-gray-600">Prins Hendrikkade 1</td>
-                          <td class="py-3 px-4 text-gray-600">Sneek</td>
+                          <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -672,7 +672,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Natuurvoedingswinkel</td>
                           <td class="py-3 px-4 text-gray-600">Singel 5</td>
-                          <td class="py-3 px-4 text-gray-600">Sneek</td>
+                          <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -740,7 +740,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Edelstenen</td>
                           <td class="py-3 px-4 text-gray-600">Kleinzand 151</td>
-                          <td class="py-3 px-4 text-gray-600">Sneek</td>
+                          <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -842,7 +842,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Woonaccessoires</td>
                           <td class="py-3 px-4 text-gray-600">Grootzand 45</td>
-                          <td class="py-3 px-4 text-gray-600">Sneek</td>
+                          <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -876,7 +876,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Kapper</td>
                           <td class="py-3 px-4 text-gray-600">Sint Antoniusplein 39</td>
-                          <td class="py-3 px-4 text-gray-600">Sneek</td>
+                          <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -910,7 +910,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Kapper, Schoonheidssalon</td>
                           <td class="py-3 px-4 text-gray-600">Willemstraat 28</td>
-                          <td class="py-3 px-4 text-gray-600">Sneek</td>
+                          <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -1143,7 +1143,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Kaas- en notenbar</td>
                           <td class="py-3 px-4 text-gray-600">Kruizebroederstr 44</td>
-                          <td class="py-3 px-4 text-gray-600">Sneek</td>
+                          <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
