--- a/fy/map.html
+++ b/fy/map.html
@@ -200,7 +200,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Restaurant, Café, Hotel</td>
                           <td class="py-3 px-4 text-gray-600">Zaailand 94</td>
-                          <td class="py-3 px-4 text-gray-600">Leeuwarden</td>
+                          <td class="py-3 px-4 text-gray-600">Ljouwert</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -234,7 +234,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Computers en onderhoud</td>
                           <td class="py-3 px-4 text-gray-600">De Wearen 20</td>
-                          <td class="py-3 px-4 text-gray-600">Oudega (SWF)</td>
+                          <td class="py-3 px-4 text-gray-600">Aldegea (SWF)</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -366,7 +366,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Garage</td>
                           <td class="py-3 px-4 text-gray-600">Vosseleane 28-B</td>
-                          <td class="py-3 px-4 text-gray-600">Woudsend</td>
+                          <td class="py-3 px-4 text-gray-600">Wâldsein</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -536,7 +536,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Elektro, Beveiligingstechniek</td>
                           <td class="py-3 px-4 text-gray-600">Scharrewiel 5-A</td>
-                          <td class="py-3 px-4 text-gray-600">Joure</td>
+                          <td class="py-3 px-4 text-gray-600">De Jouwer</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -570,7 +570,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Installateur</td>
                           <td class="py-3 px-4 text-gray-600">De Opper 2</td>
-                          <td class="py-3 px-4 text-gray-600">Heeg</td>
+                          <td class="py-3 px-4 text-gray-600">Heech</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -638,7 +638,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Bakkerij</td>
                           <td class="py-3 px-4 text-gray-600">Laagduurswoude 22</td>
-                          <td class="py-3 px-4 text-gray-600">Makkinga</td>
+                          <td class="py-3 px-4 text-gray-600">Makkingea</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -706,7 +706,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Boot- en Appartement verhuur</td>
                           <td class="py-3 px-4 text-gray-600">Lytse Súdein 13</td>
-                          <td class="py-3 px-4 text-gray-600">Uitwellingerga</td>
+                          <td class="py-3 px-4 text-gray-600">Twellingea</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -774,7 +774,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Zaalverhuur</td>
                           <td class="py-3 px-4 text-gray-600">Industrieweg 18-A</td>
-                          <td class="py-3 px-4 text-gray-600">Heerenveen</td>
+                          <td class="py-3 px-4 text-gray-600">It Hearrenfean</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -944,7 +944,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Café, Brouwerij</td>
                           <td class="py-3 px-4 text-gray-600">Nieuwe Willemskade 8</td>
-                          <td class="py-3 px-4 text-gray-600">Harlingen</td>
+                          <td class="py-3 px-4 text-gray-600">Harns</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -978,7 +978,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Supermarkt</td>
                           <td class="py-3 px-4 text-gray-600">Wirdumerdijk 7</td>
-                          <td class="py-3 px-4 text-gray-600">Leeuwarden</td>
+                          <td class="py-3 px-4 text-gray-600">Ljouwert</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -1012,7 +1012,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Lego verhuur</td>
                           <td class="py-3 px-4 text-gray-600">W. Barentszstraat 3</td>
-                          <td class="py-3 px-4 text-gray-600">W. Terschellng</td>
+                          <td class="py-3 px-4 text-gray-600">West-Skylge</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-gray-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -1041,7 +1041,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Klusbedrijf</td>
                           <td class="py-3 px-4 text-gray-600">Peperstraat 10</td>
-                          <td class="py-3 px-4 text-gray-600">Oudeschoot</td>
+                          <td class="py-3 px-4 text-gray-600">Aldskoat</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -1075,7 +1075,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Museum</td>
                           <td class="py-3 px-4 text-gray-600">Merk 4</td>
-                          <td class="py-3 px-4 text-gray-600">Workum</td>
+                          <td class="py-3 px-4 text-gray-600">Warkum</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -1109,7 +1109,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Chartervluchten</td>
                           <td class="py-3 px-4 text-gray-600">Melkemastate 10</td>
-                          <td class="py-3 px-4 text-gray-600">Leeuwarden</td>
+                          <td class="py-3 px-4 text-gray-600">Ljouwert</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-gray-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
