--- a/fy/map.html
+++ b/fy/map.html
@@ -234,7 +234,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Computers en onderhoud</td>
                           <td class="py-3 px-4 text-gray-600">De Wearen 20</td>
-                          <td class="py-3 px-4 text-gray-600">Aldegea (SWF)</td>
+                          <td class="py-3 px-4 text-gray-600">Aldegea</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -1012,7 +1012,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Lego verhuur</td>
                           <td class="py-3 px-4 text-gray-600">W. Barentszstraat 3</td>
-                          <td class="py-3 px-4 text-gray-600">West-Skylge</td>
+                          <td class="py-3 px-4 text-gray-600">West Skylge</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-gray-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
