--- a/en/map.html
+++ b/en/map.html
@@ -232,7 +232,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Computers en onderhoud</td>
+                          <td class="py-3 px-4 text-gray-600">Computers and maintenance</td>
                           <td class="py-3 px-4 text-gray-600">De Wearen 20</td>
                           <td class="py-3 px-4 text-gray-600">Oudega (SWF)</td>
                           <td class="py-3 px-4 text-center">
@@ -266,7 +266,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Drukkerij</td>
+                          <td class="py-3 px-4 text-gray-600">Printing shop</td>
                           <td class="py-3 px-4 text-gray-600">Graaf Adolfstraat 36-C</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -300,7 +300,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">IJssalon</td>
+                          <td class="py-3 px-4 text-gray-600">Ice cream shop</td>
                           <td class="py-3 px-4 text-gray-600">Leeuwarderweg 1</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -330,7 +330,7 @@
                             <a href="https://instagram.com/e.m_enjoy/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline flex items-center">
                             E.M Enjoy
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Broodjeszaak</td>
+                          <td class="py-3 px-4 text-gray-600">Sandwich shop</td>
                           <td class="py-3 px-4 text-gray-600">Grootzand 49</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -398,7 +398,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Telefoon reparaties</td>
+                          <td class="py-3 px-4 text-gray-600">Phone repairs</td>
                           <td class="py-3 px-4 text-gray-600">Grootzand 41</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -432,7 +432,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Straatmuzikant</td>
+                          <td class="py-3 px-4 text-gray-600">Street musician</td>
                           <td class="py-3 px-4 text-gray-600">Centrum (Zaterdagen)</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -466,7 +466,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Woonaccessoires</td>
+                          <td class="py-3 px-4 text-gray-600">Interior decorations</td>
                           <td class="py-3 px-4 text-gray-600">Buorren 35</td>
                           <td class="py-3 px-4 text-gray-600">Terherne</td>
                           <td class="py-3 px-4 text-center">
@@ -500,7 +500,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Shiatsu, Acupunctuur</td>
+                          <td class="py-3 px-4 text-gray-600">Shiatsu, Acupuncture</td>
                           <td class="py-3 px-4 text-gray-600">Dr. Obe Postmastraat 1</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -534,7 +534,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Elektro, Beveiligingstechniek</td>
+                          <td class="py-3 px-4 text-gray-600">Electrical, Security systems</td>
                           <td class="py-3 px-4 text-gray-600">Scharrewiel 5-A</td>
                           <td class="py-3 px-4 text-gray-600">Joure</td>
                           <td class="py-3 px-4 text-center">
@@ -568,7 +568,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Installateur</td>
+                          <td class="py-3 px-4 text-gray-600">Installer</td>
                           <td class="py-3 px-4 text-gray-600">De Opper 2</td>
                           <td class="py-3 px-4 text-gray-600">Heeg</td>
                           <td class="py-3 px-4 text-center">
@@ -636,7 +636,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Bakkerij</td>
+                          <td class="py-3 px-4 text-gray-600">Bakery</td>
                           <td class="py-3 px-4 text-gray-600">Laagduurswoude 22</td>
                           <td class="py-3 px-4 text-gray-600">Makkinga</td>
                           <td class="py-3 px-4 text-center">
@@ -670,7 +670,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Natuurvoedingswinkel</td>
+                          <td class="py-3 px-4 text-gray-600">Health food store</td>
                           <td class="py-3 px-4 text-gray-600">Singel 5</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -704,7 +704,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Boot- en Appartement verhuur</td>
+                          <td class="py-3 px-4 text-gray-600">Boat and Apartment rentals</td>
                           <td class="py-3 px-4 text-gray-600">Lytse Súdein 13</td>
                           <td class="py-3 px-4 text-gray-600">Uitwellingerga</td>
                           <td class="py-3 px-4 text-center">
@@ -738,7 +738,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Edelstenen</td>
+                          <td class="py-3 px-4 text-gray-600">Gemstones</td>
                           <td class="py-3 px-4 text-gray-600">Kleinzand 151</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -772,7 +772,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Zaalverhuur</td>
+                          <td class="py-3 px-4 text-gray-600">Venue rental</td>
                           <td class="py-3 px-4 text-gray-600">Industrieweg 18-A</td>
                           <td class="py-3 px-4 text-gray-600">Heerenveen</td>
                           <td class="py-3 px-4 text-center">
@@ -806,7 +806,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Loodsverhuur, Jachtbouw</td>
+                          <td class="py-3 px-4 text-gray-600">Warehouse rental, Yacht building</td>
                           <td class="py-3 px-4 text-gray-600">Lytse Súdein 51</td>
                           <td class="py-3 px-4 text-gray-600">Uitwellingerga</td>
                           <td class="py-3 px-4 text-center">
@@ -840,7 +840,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Woonaccessoires</td>
+                          <td class="py-3 px-4 text-gray-600">Interior decorations</td>
                           <td class="py-3 px-4 text-gray-600">Grootzand 45</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -874,7 +874,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Kapper</td>
+                          <td class="py-3 px-4 text-gray-600">Barber</td>
                           <td class="py-3 px-4 text-gray-600">Sint Antoniusplein 39</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -908,7 +908,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Kapper, Schoonheidssalon</td>
+                          <td class="py-3 px-4 text-gray-600">Hairdresser, Beauty salon</td>
                           <td class="py-3 px-4 text-gray-600">Willemstraat 28</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
@@ -942,7 +942,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Café, Brouwerij</td>
+                          <td class="py-3 px-4 text-gray-600">Cafe, Brewery</td>
                           <td class="py-3 px-4 text-gray-600">Nieuwe Willemskade 8</td>
                           <td class="py-3 px-4 text-gray-600">Harlingen</td>
                           <td class="py-3 px-4 text-center">
@@ -976,7 +976,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Supermarkt</td>
+                          <td class="py-3 px-4 text-gray-600">Supermarket</td>
                           <td class="py-3 px-4 text-gray-600">Wirdumerdijk 7</td>
                           <td class="py-3 px-4 text-gray-600">Leeuwarden</td>
                           <td class="py-3 px-4 text-center">
@@ -1010,7 +1010,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Lego verhuur</td>
+                          <td class="py-3 px-4 text-gray-600">Lego rental</td>
                           <td class="py-3 px-4 text-gray-600">W. Barentszstraat 3</td>
                           <td class="py-3 px-4 text-gray-600">W. Terschellng</td>
                           <td class="py-3 px-4 text-center">
@@ -1039,7 +1039,7 @@
                           <td class="py-3 px-4 font-medium">
                             Bouwservice Wagenaar
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Klusbedrijf</td>
+                          <td class="py-3 px-4 text-gray-600">Handyman service</td>
                           <td class="py-3 px-4 text-gray-600">Peperstraat 10</td>
                           <td class="py-3 px-4 text-gray-600">Oudeschoot</td>
                           <td class="py-3 px-4 text-center">
@@ -1107,7 +1107,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Chartervluchten</td>
+                          <td class="py-3 px-4 text-gray-600">Charter flights</td>
                           <td class="py-3 px-4 text-gray-600">Melkemastate 10</td>
                           <td class="py-3 px-4 text-gray-600">Leeuwarden</td>
                           <td class="py-3 px-4 text-center">
@@ -1141,7 +1141,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Kaas- en notenbar</td>
+                          <td class="py-3 px-4 text-gray-600">Cheese and nut bar</td>
                           <td class="py-3 px-4 text-gray-600">Kruizebroederstr 44</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
