--- a/en/map.html
+++ b/en/map.html
@@ -234,7 +234,7 @@
                           </td>
                           <td class="py-3 px-4 text-gray-600">Computers and maintenance</td>
                           <td class="py-3 px-4 text-gray-600">De Wearen 20</td>
-                          <td class="py-3 px-4 text-gray-600">Oudega (SWF)</td>
+                          <td class="py-3 px-4 text-gray-600">Oudega</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
