--- a/en/map.html
+++ b/en/map.html
@@ -433,7 +433,7 @@
                             </a>
                           </td>
                           <td class="py-3 px-4 text-gray-600">Street musician</td>
-                          <td class="py-3 px-4 text-gray-600">Centrum (Zaterdagen)</td>
+                          <td class="py-3 px-4 text-gray-600">Center (Saturdays)</td>
                           <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
@@ -806,7 +806,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Warehouse rental, Yacht building</td>
+                          <td class="py-3 px-4 text-gray-600">Shed rental, Yacht building</td>
                           <td class="py-3 px-4 text-gray-600">Lytse Súdein 51</td>
                           <td class="py-3 px-4 text-gray-600">Uitwellingerga</td>
                           <td class="py-3 px-4 text-center">
