--- a/fy/map.html
+++ b/fy/map.html
@@ -198,7 +198,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Restaurant, Café, Hotel</td>
+                          <td class="py-3 px-4 text-gray-600">Restaurant, Kafee, Hotel</td>
                           <td class="py-3 px-4 text-gray-600">Zaailand 94</td>
                           <td class="py-3 px-4 text-gray-600">Ljouwert</td>
                           <td class="py-3 px-4 text-center">
@@ -232,7 +232,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Computers en onderhoud</td>
+                          <td class="py-3 px-4 text-gray-600">Kompjûters en ûnderhâld</td>
                           <td class="py-3 px-4 text-gray-600">De Wearen 20</td>
                           <td class="py-3 px-4 text-gray-600">Aldegea</td>
                           <td class="py-3 px-4 text-center">
@@ -300,7 +300,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">IJssalon</td>
+                          <td class="py-3 px-4 text-gray-600">Iissalon</td>
                           <td class="py-3 px-4 text-gray-600">Leeuwarderweg 1</td>
                           <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
@@ -330,7 +330,7 @@
                             <a href="https://instagram.com/e.m_enjoy/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline flex items-center">
                             E.M Enjoy
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Broodjeszaak</td>
+                          <td class="py-3 px-4 text-gray-600">Broadsjesaak</td>
                           <td class="py-3 px-4 text-gray-600">Grootzand 49</td>
                           <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
@@ -364,7 +364,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Garage</td>
+                          <td class="py-3 px-4 text-gray-600">Garaazje</td>
                           <td class="py-3 px-4 text-gray-600">Vosseleane 28-B</td>
                           <td class="py-3 px-4 text-gray-600">Wâldsein</td>
                           <td class="py-3 px-4 text-center">
@@ -398,7 +398,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Telefoon reparaties</td>
+                          <td class="py-3 px-4 text-gray-600">Tillefoanreparaasjes</td>
                           <td class="py-3 px-4 text-gray-600">Grootzand 41</td>
                           <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
@@ -432,8 +432,8 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Straatmuzikant</td>
-                          <td class="py-3 px-4 text-gray-600">Centrum (Zaterdagen)</td>
+                          <td class="py-3 px-4 text-gray-600">Strjitmuzikant</td>
+                          <td class="py-3 px-4 text-gray-600">Sintrum (Saterdeis)</td>
                           <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
@@ -466,7 +466,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Woonaccessoires</td>
+                          <td class="py-3 px-4 text-gray-600">Wenaccessoires</td>
                           <td class="py-3 px-4 text-gray-600">Buorren 35</td>
                           <td class="py-3 px-4 text-gray-600">Terherne</td>
                           <td class="py-3 px-4 text-center">
@@ -500,7 +500,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Shiatsu, Acupunctuur</td>
+                          <td class="py-3 px-4 text-gray-600">Shiatsu, Akupunktur</td>
                           <td class="py-3 px-4 text-gray-600">Dr. Obe Postmastraat 1</td>
                           <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
@@ -534,7 +534,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Elektro, Beveiligingstechniek</td>
+                          <td class="py-3 px-4 text-gray-600">Elektro, Befeiligingstechnyk</td>
                           <td class="py-3 px-4 text-gray-600">Scharrewiel 5-A</td>
                           <td class="py-3 px-4 text-gray-600">De Jouwer</td>
                           <td class="py-3 px-4 text-center">
@@ -568,7 +568,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Installateur</td>
+                          <td class="py-3 px-4 text-gray-600">Ynstalleur</td>
                           <td class="py-3 px-4 text-gray-600">De Opper 2</td>
                           <td class="py-3 px-4 text-gray-600">Heech</td>
                           <td class="py-3 px-4 text-center">
@@ -670,7 +670,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Natuurvoedingswinkel</td>
+                          <td class="py-3 px-4 text-gray-600">Natuerfiedingswinkel</td>
                           <td class="py-3 px-4 text-gray-600">Singel 5</td>
                           <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
@@ -704,7 +704,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Boot- en Appartement verhuur</td>
+                          <td class="py-3 px-4 text-gray-600">Boat- en Appartemintferhier</td>
                           <td class="py-3 px-4 text-gray-600">Lytse Súdein 13</td>
                           <td class="py-3 px-4 text-gray-600">Twellingea</td>
                           <td class="py-3 px-4 text-center">
@@ -738,7 +738,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Edelstenen</td>
+                          <td class="py-3 px-4 text-gray-600">Edelstiennen</td>
                           <td class="py-3 px-4 text-gray-600">Kleinzand 151</td>
                           <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
@@ -772,7 +772,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Zaalverhuur</td>
+                          <td class="py-3 px-4 text-gray-600">Sealferhier</td>
                           <td class="py-3 px-4 text-gray-600">Industrieweg 18-A</td>
                           <td class="py-3 px-4 text-gray-600">It Hearrenfean</td>
                           <td class="py-3 px-4 text-center">
@@ -806,7 +806,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Loodsverhuur, Jachtbouw</td>
+                          <td class="py-3 px-4 text-gray-600">Loadsferhier, Jachtbou</td>
                           <td class="py-3 px-4 text-gray-600">Lytse Súdein 51</td>
                           <td class="py-3 px-4 text-gray-600">Uitwellingerga</td>
                           <td class="py-3 px-4 text-center">
@@ -840,7 +840,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Woonaccessoires</td>
+                          <td class="py-3 px-4 text-gray-600">Wenaccessoires</td>
                           <td class="py-3 px-4 text-gray-600">Grootzand 45</td>
                           <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
@@ -908,7 +908,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Kapper, Schoonheidssalon</td>
+                          <td class="py-3 px-4 text-gray-600">Kapper, Skientmesalon</td>
                           <td class="py-3 px-4 text-gray-600">Willemstraat 28</td>
                           <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
@@ -942,7 +942,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Café, Brouwerij</td>
+                          <td class="py-3 px-4 text-gray-600">Kafee, Brouwerij</td>
                           <td class="py-3 px-4 text-gray-600">Nieuwe Willemskade 8</td>
                           <td class="py-3 px-4 text-gray-600">Harns</td>
                           <td class="py-3 px-4 text-center">
@@ -976,7 +976,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Supermarkt</td>
+                          <td class="py-3 px-4 text-gray-600">Supermerk</td>
                           <td class="py-3 px-4 text-gray-600">Wirdumerdijk 7</td>
                           <td class="py-3 px-4 text-gray-600">Ljouwert</td>
                           <td class="py-3 px-4 text-center">
@@ -1010,7 +1010,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Lego verhuur</td>
+                          <td class="py-3 px-4 text-gray-600">Lego ferhier</td>
                           <td class="py-3 px-4 text-gray-600">W. Barentszstraat 3</td>
                           <td class="py-3 px-4 text-gray-600">West Skylge</td>
                           <td class="py-3 px-4 text-center">
@@ -1039,7 +1039,7 @@
                           <td class="py-3 px-4 font-medium">
                             Bouwservice Wagenaar
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Klusbedrijf</td>
+                          <td class="py-3 px-4 text-gray-600">Klusbedriuw</td>
                           <td class="py-3 px-4 text-gray-600">Peperstraat 10</td>
                           <td class="py-3 px-4 text-gray-600">Aldskoat</td>
                           <td class="py-3 px-4 text-center">
@@ -1107,7 +1107,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Chartervluchten</td>
+                          <td class="py-3 px-4 text-gray-600">Charterflechten</td>
                           <td class="py-3 px-4 text-gray-600">Melkemastate 10</td>
                           <td class="py-3 px-4 text-gray-600">Ljouwert</td>
                           <td class="py-3 px-4 text-center">
@@ -1141,7 +1141,7 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Kaas- en notenbar</td>
+                          <td class="py-3 px-4 text-gray-600">Tsiis- en notebar</td>
                           <td class="py-3 px-4 text-gray-600">Kruizebroederstr 44</td>
                           <td class="py-3 px-4 text-gray-600">Snits</td>
                           <td class="py-3 px-4 text-center">
