--- a/nl/map.html
+++ b/nl/map.html
@@ -210,7 +210,7 @@
                           </td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
-                              <svg class="h-5 w-5 text-gray-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                               </svg>
                             </div>
