--- a/nl/map.html
+++ b/nl/map.html
@@ -176,7 +176,7 @@
                 
                 <div class="overflow-x-auto">
                   <table id="businessTable" class="w-full border-collapse">
-                    <caption class="text-sm text-gray-500 mb-4">Laatst bijgewerkt: 27 september 2025</caption>
+                    <caption class="text-sm text-gray-500 mb-4">Laatst bijgewerkt: 5 oktober 2025</caption>
                     <thead>
                       <tr class="border-b border-gray-200">
                         <th class="text-left py-3 px-4 font-medium text-gray-900">Bedrijf</th>
