--- a/en/map.html
+++ b/en/map.html
@@ -176,7 +176,7 @@
                 
                 <div class="overflow-x-auto">
                   <table id="businessTable" class="w-full border-collapse">
-                    <caption class="text-sm text-gray-500 mb-4">Last updated: 27 september 2025</caption>
+                    <caption class="text-sm text-gray-500 mb-4">Last updated: 5 october 2025</caption>
                     <thead>
                       <tr class="border-b border-gray-200">
                         <th class="text-left py-3 px-4 font-medium text-gray-900">Business</th>
@@ -189,6 +189,40 @@
                       </tr>
                     </thead>
                     <tbody>
+                      <tr class="border-b border-gray-100 hover:bg-gray-50">
+                          <td class="py-3 px-4 font-medium">
+                            <a href="https://www.deboervlees.nl/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline flex items-center">
+                              De Boer Vlees
+                              <svg class="ml-1 h-3 w-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+                              </svg>
+                            </a>
+                          </td>
+                          <td class="py-3 px-4 text-gray-600">Meat wholesaler</td>
+                          <td class="py-3 px-4 text-gray-600">Castorweg 3</td>
+                          <td class="py-3 px-4 text-gray-600">Leeuwarden</td>
+                          <td class="py-3 px-4 text-center">
+                            <div class="flex justify-center">
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                              </svg>
+                            </div>
+                          </td>
+                          <td class="py-3 px-4 text-center">
+                            <div class="flex justify-center">
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                              </svg>
+                            </div>
+                          </td>
+                          <td class="py-3 px-4 text-center">
+                            <div class="flex justify-center">
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                              </svg>
+                            </div>
+                          </td>
+                        </tr>
                       <tr class="border-b border-gray-100 hover:bg-gray-50">
                           <td class="py-3 px-4 font-medium">
                             <a href="https://bijonsindebrouwerij.nl/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline flex items-center">
