Update Lotus Bio Shop URL to https://www.lotusbioshop.com/ and fix 'Copy To Print' in en/map.html

--- a/fy/map.html
+++ b/fy/map.html
@@ -697,7 +697,7 @@
                         </tr>
                       <tr class="border-b border-gray-100 hover:bg-gray-50">
                           <td class="py-3 px-4 font-medium">
-                            <a href="https://lotusnatuurvoeding.jouwweb.nl/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline flex items-center">
+                            <a href="https://www.lotusbioshop.com/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline flex items-center">
                               Lotus Bio Shop
                               <svg class="ml-1 h-3 w-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
